[package]
name = "bevy_pg_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
bevy_enhanced_input = "0.19.3"
libm = "0.2.15"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
serde = "1.0.228"


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
